# Model-Infer

./: CMakeLists.txt  README.md
build_nv_x86/: CMakeCache.txt  Makefile  cmake_install.cmake
build_nv_x86/modules/app_yolo/: Makefile  cmake_install.cmake
build_nv_x86/test/yolov5/: Makefile  cmake_install.cmake
cmake/: install-toolchain.cmake
doc/: CONTRIBUTING.md  roadmap.md
install_nvidia/: run.sh
install_nvidia/yolov5_bin/x86/: yolov5_project_exe
install_nvidia/yolov5_bin/x86/config/yaml/: yolov5_config.yaml
install_nvidia/yolov5_bin/x86/workspace/log/: 20241031-021401.376388
install_nvidia/yolox_bin/x86/: yolox_project_exe
install_nvidia/yolox_bin/x86/workspace/log/: 20241031-021051.373441
modules/app_yolo/: CMakeLists.txt
modules/app_yolo/app/: inferpipeline.cpp  inferpipeline.h
modules/app_yolo/appinterface/: interface.cpp  interface.h
modules/app_yolo/architecture/: decodeprocessor.cpp  decodeprocessor.h  inference.cpp  inference.h  postprocessor.cpp  postprocessor.h  preprocessor.cpp  preprocessor.h  trt_infer.cpp  trt_infer.h  utils.hpp
modules/app_yolo/architecture/common/: appconfig.cpp  appconfig.h  parseconfig.cpp  parseconfig.h
modules/app_yolo/architecture/cuda/: gpu_decode.cu  warpaffine.cu  warpaffine.hpp
modules/app_yolo/architecture/module/: module.h
modules/app_yolo/launch/: start.launch
modules/common/msg_enum/: enum_msg.h
modules/common/msg_img/: dataset.h  img_msg.h
modules/common/msg_struct/: module_struct.h  task_struct.hpp
modules/common/utils/: colorprintf.h  common.hpp  glog_msg.h  std_buffer.h  std_cmake.h  std_cmake.h.in  std_time.h
modules/config/model/yolox/: yolox_nano.onnx
modules/config/yaml/yolox/: yolox_config.yaml
scripts/: bash_config.sh  build.sh  run.sh
test/yolov5/: main.cpp
test/yolox/: CMakeLists.txt  main.cpp
